--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "**/.project": true,
     "**/.settings": true,
     "**/.factorypath": true
-  }
+  },
+  // "java.home": "/Library/Java/JavaVirtualMachines/jdk1.8.0_221.jdk"
 }
